<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_subscribe_item"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="20dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/_9_5"
        android:textColor="#795548"
        android:textSize="28sp"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/tvScore"
        android:layout_toEndOf="@id/imgPreview"
        android:layout_toStartOf="@+id/tvScore"
        android:ellipsize="end"
        android:gravity="left|center"
        android:maxLines="1"
        android:text="@string/douban_popularbook_title"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imgPreview"
        android:layout_alignStart="@id/tvTitle"
        android:layout_below="@id/tvTitle"
        android:gravity="left|center"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/douban_popularbook_author"
        android:textSize="15sp"
        />


</RelativeLayout>