<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_subscribe_item"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="10dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    >

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/imgPreview"
        android:background="#b99e9e9e"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/douyu_game_author"
            android:textColor="#ffffff"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tvNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/_3617"
            android:textColor="#ffffff"
            android:textSize="16sp"
            />


    </LinearLayout>


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/imgPreview"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/douyu_game_title"
        android:textSize="18sp"
        />


</RelativeLayout>